# RetSphinxEngine

./: .gitignore  .travis.yml  3DObject.cpp  3DObject.h  CMakeLists.txt  Engine.cpp  Engine.h  GameEngine.cpp  GameEngine.h  GameEngine.res  Gradient.h  Image.cpp  Image.h  LICENSE.md  Makefile  Makefile.mingw  Makefile.osx  Makefile.unix  Makefile_32.unix  Object.cpp  Object.h  README.md  TODO.txt  Text.cpp  Text.h  arc.cpp  arc.h  bg.cpp  bg.h  color.cpp  cursor.cpp  cursor.h  fixdylibs_mac.sh  globaldefs.cpp  globaldefs.h  hud.cpp  hud.h  lattice.cpp  lattice.h  logging.conf  (+12 more)
cmake/Modules/: FindBox2D.cmake  FindFMOD.cmake  FindSDL2.cmake
dep/: CMakeLists.txt  glmx.h  image.cpp  stb_image_write.h
dep/imgui/: CMakeLists.txt  imconfig.h  imgui.cpp  imgui.h  imgui_user.inl
dep/lua/: CMakeLists.txt  Makefile  Makefile.mac  liolib.c  lvm.c
dep/squish/: CMakeLists.txt
engine/: 3DObject.cpp  3DObject.h  Arc.cpp  Arc.h  BezierInterpolation.cpp  BezierInterpolation.h  CMakeLists.txt  Color.cpp  Color.h  DebugDraw.cpp  DebugDraw.h  Drawable.h  DrawableItem.h  Engine.cpp  Engine.h  EngineContactListener.cpp  EngineContactListener.h  Engine_GL.cpp  Engine_Vulkan.cpp  Engine_Window.cpp  Font.cpp  Font.h  GLImage.cpp  GLImage.h  Gradient.cpp  Gradient.h  HeadTracker.cpp  HeadTracker.h  Image.cpp  Image.h  ImgFont.cpp  ImgFont.h  InputDevice.cpp  InputDevice.h  Interpolation.h  Interpolator.cpp  Interpolator.h  Lattice.cpp  Lattice.h  LinearInterpolation.cpp  (+80 more)
engine/actions/: Action.h  ActionBind.h  AxisAction.cpp  AxisAction.h  CombinedAction.cpp  CombinedAction.h  DpadMovement.cpp  DpadMovement.h  JoyButtonAction.cpp  JoyButtonAction.h  JoystickMovement.cpp  JoystickMovement.h  KeyboardAction.cpp  KeyboardAction.h  KeyboardMovement.cpp  KeyboardMovement.h  MouseButtonAction.cpp  MouseButtonAction.h  Movement.h  MovementBind.h  NoAction.h  NoMovement.h
engine/events/: Observer.h  Subject.cpp  Subject.h
engine/include/: DebugDraw.h  Engine.h  EngineContactListener.h  Node.h  Object.h  bg.h  globaldefs.h  lattice.h  luadefines.h  luafuncs.h  luainterface.h  particles.h  simplexnoise1234.h
engine/managers/: EntityManager.cpp  EntityManager.h  InputManager.cpp  InputManager.h  InterpolationManager.cpp  InterpolationManager.h  NodeManager.cpp  NodeManager.h  ObjectManager.cpp  ObjectManager.h  ParticleSystemManager.cpp  ParticleSystemManager.h  SceneryManager.cpp  SceneryManager.h  SoundManager.cpp  SoundManager.h  Stringbank.cpp  Stringbank.h
engine/sound/: SoundVol.cpp
game/: CMakeLists.txt  DebugUI.cpp  DebugUI.h  Editor.cpp  Editor.h  GameEngine.cpp  GameEngine.h  GameEngine.rc  GameEngine_color.cpp  GameEngine_events.cpp  GameEngine_xmlparse.cpp  LevelEditor.cpp  LevelEditor.h  LuaFuncs.cpp  MemoryEditor.cpp  MemoryEditor.h  ParticleEditor.cpp  ParticleEditor.h  SteelSeriesEditor.cpp  SteelSeriesEditor.h  color.cpp  luafuncs.cpp  main.cpp
include/linux/: fmod.h
include/mac/: fmod.h
include/mac/opencv2/: opencv.hpp
include/windows/: fmod.h  videoInput.h
io/: CMakeLists.txt  FileOperations.cpp  FileOperations.h  Hash.cpp  Hash.h  Logger.cpp  Logger.h  PakLoader.cpp  PakLoader.h  Parse.cpp  Parse.h  ResourceTypes.cpp  ResourceTypes.h  StringUtils.cpp  StringUtils.h  easylogging++.h  image.cpp  image.h  log.cpp  log.h
lib/Mac/SDL2.framework/Versions/A/Headers/: SDL.h
net/: CMakeLists.txt  MutexLock.cpp  MutexLock.h  NetworkThread.cpp  NetworkThread.h  SteelSeriesClient.cpp  SteelSeriesClient.h  SteelSeriesCommunicator.cpp  SteelSeriesCommunicator.h  SteelSeriesEvents.h  SteelSeriesHaptic.cpp  SteelSeriesHaptic.h  ThreadsafeQueue.h  minihttp.cpp  minihttp.h
res/3d/: dome.blend  dome.tiny3d  gradienttest.xml  noisetest.xml  solarsystem.scene.xml
res/cursor/: arrow.xml
res/lua/: bounce.lua  init.lua  marble.lua  math.lua  node_burgermakingcontroller.lua  node_gravwell.lua  node_heartbeat.lua  node_linearforcefield.lua  node_loadmap.lua  node_notereceiver.lua  node_radialforcefield.lua  node_sunlight.lua  node_tammousecontroller - bkup2.lua  node_tammousecontroller - workingbackup.lua  node_tammousecontroller.lua  node_template.lua  node_test.lua  notereceiver.lua  soundband.lua  spaceship.lua
res/lua/node/: audiofilter.lua  audiofilter2.lua  burgermakingcontroller.lua  gravwell.lua  heartbeat.lua  highpassfilter.lua  linearforcefield.lua  loadmap.lua  lowpassfilter.lua  notereceiver.lua  radialforcefield.lua  tammousecontroller.lua  template.lua  test.lua
res/shaders/: 3dobj.vert  colored.vert  compile.bat  debugdraw.frag  debugdraw.vert  default.frag  default.vert  particles.frag  particles.vert  reduce.bat  shader.frag  shaderdbg.frag  shaderdbg.vert  test.fragment  test.vertex
tools/: CMakeLists.txt
tools/compressor/: CMakeLists.txt  images.cpp  lua.cpp  main.cpp  main.h  mesh.cpp  shader.cpp  sound.cpp
tools/compressor/LuaMinify/: CommandLineBeautify.lua  CommandLineLiveBeautify.lua  CommandLineLiveMinify.lua  CommandLineMinify.lua  LuaMinify.sh  Scope.lua
tools/imgExtractor/: CMakeLists.txt  main.cpp
